--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -104,7 +104,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(createitem createitem.cpp)
     DFHACK_PLUGIN(cursecheck cursecheck.cpp)
     DFHACK_PLUGIN(deramp deramp.cpp)
-#    DFHACK_PLUGIN(dig dig.cpp)
+    DFHACK_PLUGIN(dig dig.cpp)
     DFHACK_PLUGIN(digFlood digFlood.cpp)
 #    add_subdirectory(diggingInvaders)
     DFHACK_PLUGIN(drybuckets drybuckets.cpp)
