--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -106,7 +106,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(deramp deramp.cpp)
     DFHACK_PLUGIN(dig dig.cpp)
     DFHACK_PLUGIN(digFlood digFlood.cpp)
-#    add_subdirectory(diggingInvaders)
+    add_subdirectory(diggingInvaders)
     DFHACK_PLUGIN(drybuckets drybuckets.cpp)
     DFHACK_PLUGIN(dwarfmonitor dwarfmonitor.cpp)
     DFHACK_PLUGIN(embark-tools embark-tools.cpp)
