--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -145,7 +145,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(search search.cpp)
     DFHACK_PLUGIN(seedwatch seedwatch.cpp)
     DFHACK_PLUGIN(showmood showmood.cpp)
-#    DFHACK_PLUGIN(siege-engine siege-engine.cpp LINK_LIBRARIES lua)
+    DFHACK_PLUGIN(siege-engine siege-engine.cpp LINK_LIBRARIES lua)
     DFHACK_PLUGIN(sort sort.cpp LINK_LIBRARIES lua)
     DFHACK_PLUGIN(steam-engine steam-engine.cpp)
     DFHACK_PLUGIN(stockflow stockflow.cpp LINK_LIBRARIES lua)
