--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -134,7 +134,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(petcapRemover petcapRemover.cpp)
 #    DFHACK_PLUGIN(plants plants.cpp)
     DFHACK_PLUGIN(probe probe.cpp)
-#    DFHACK_PLUGIN(prospector prospector.cpp)
+    DFHACK_PLUGIN(prospector prospector.cpp)
     DFHACK_PLUGIN(power-meter power-meter.cpp LINK_LIBRARIES lua)
     DFHACK_PLUGIN(regrass regrass.cpp)
     DFHACK_PLUGIN(remotefortressreader remotefortressreader.cpp PROTOBUFS RemoteFortressReader)
