Fixed plant compile-time errors. plant create works, other commands still need work.
Signed-off-by: deathrat <deathrat43@gmail.com>

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -132,7 +132,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(misery misery.cpp)
     DFHACK_PLUGIN(mousequery mousequery.cpp)
     DFHACK_PLUGIN(petcapRemover petcapRemover.cpp)
-#    DFHACK_PLUGIN(plants plants.cpp)
+    DFHACK_PLUGIN(plants plants.cpp)
     DFHACK_PLUGIN(probe probe.cpp)
     DFHACK_PLUGIN(prospector prospector.cpp)
     DFHACK_PLUGIN(power-meter power-meter.cpp LINK_LIBRARIES lua)
